--- a/catalogo.html
+++ b/catalogo.html
@@ -23,22 +23,22 @@
     <h2>Catálogo</h2>
     <div class="productos-grid">
         <div class="producto">
-            <img src="https://images.unsplash.com/photo-1598970434795-0c54fe7c0642?auto=format&fit=crop&w=400&q=80" alt="Playera deportiva">
+            <img src="" alt="Playera deportiva">
             <h3>Playera deportiva</h3>
             <p>$299 MXN</p>
         </div>
         <div class="producto">
-            <img src="https://images.unsplash.com/photo-1600180758891-8ef4e93f37c2?auto=format&fit=crop&w=400&q=80" alt="Pantalón deportivo">
+            <img src="" alt="Pantalón deportivo">
             <h3>Pantalón deportivo</h3>
             <p>$499 MXN</p>
         </div>
         <div class="producto">
-            <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?auto=format&fit=crop&w=400&q=80" alt="Zapatillas deportivas">
+            <img src="" alt="Zapatillas deportivas">
             <h3>Zapatillas deportivas</h3>
             <p>$1200 MXN</p>
         </div>
         <div class="producto">
-            <img src="https://images.unsplash.com/photo-1526406915890-cc1b0e1cbdc3?auto=format&fit=crop&w=400&q=80" alt="Sudadera">
+            <img src="" alt="Sudadera">
             <h3>Sudadera</h3>
             <p>$799 MXN</p>
         </div>
