--- a/catalogo.html
+++ b/catalogo.html
@@ -9,7 +9,10 @@
 <body>
 
 <header>
-    <div class="logo">FaDa Sports</div>
+    <div class="logo">
+        <a href="index.html"><img class="logo-img" src="/img/opc1.png" alt="logo empresa"></a>
+        FaDa Sports
+    </div>
     <nav class="menu">
         <a href="index.html">Inicio</a>
         <a href="quienes.html">Quiénes Somos</a>
