--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FaDa Sports - Inicio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="/img/opc1.png">
 </head>
 <body>
 
 <header>
-    <div class="logo">FaDa Sports</div>
+    <div class="logo">
+        <a href="index.html"><img class="logo-img" src="/img/opc1.png" alt="logo empresa"></a>
+        <p>FaDa Sports</p>
+    </div>
     <nav class="menu">
         <a href="index.html">Inicio</a>
         <a href="quienes.html">Quiénes Somos</a>
@@ -21,8 +25,9 @@
 
 <section class="section inicio">
     <div class="inicio-texto">
-        <h1>Bienvenido a FaDa Sports</h1>
-        <p>La mejor tienda de ropa deportiva en línea. Calidad, comodidad y estilo para tu entrenamiento.</p>
+        <h2>Bienvenido a </h2>
+        <h1> FaDa Sports</h1>
+        <p>La mejor tienda de ropa deportiva en línea. Donde encontraras <strong>calidad</strong>, <strong>comodidad</strong> y <strong>estilo </strong>para tu entrenamiento.</p>
         <a href="catalogo.html" class="btn">Ver Catálogo</a>
     </div>
     <div class="inicio-imagen">
