--- a/registro.html
+++ b/registro.html
@@ -26,7 +26,7 @@
     <h2>Registro</h2>
     <div class="fondo-registro">
         <form>
-            <legend>Favor de llenar todos los campos</legend>
+            <legend>Favor de llenaar todos los campos</legend>
             <div class="form-grid">
                 <label>Nombre</label>
                 <input type="text" placeholder="Nombre completo" required>
