se agrego nueva seccion al index con futuros cambios 06/10/2025

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FaDa Sports - Inicio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/img/opc1.png">
 </head>
 <body>
@@ -25,16 +28,77 @@
 
 <section class="section inicio">
     <div class="inicio-texto">
-        <h2>Bienvenido a </h2>
-        <h1> FaDa Sports</h1>
+        <h1> Bienvenido a FaDa Sports</h1>
         <p>La mejor tienda de ropa deportiva en línea. Donde encontraras <strong>calidad</strong>, <strong>comodidad</strong> y <strong>estilo </strong>para tu entrenamiento.</p>
+        <h2>¿Por Qué Elegir FaDa Sports?</h2>
+    <div class="inicio-beneficios">
+            <div>
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="35"
+                height="35"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#ffffff"
+                stroke-width="1.25"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                >
+                <path d="M12 6l4 6l5 -4l-2 10h-14l-2 -10l5 4z" />
+                </svg>
+                <h3>Calidad Superior</h3>
+                <p>Materiales resistentes y duraderos para cualquier desafío.</p>
+            </div>
+            <div>
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="36"
+                height="36"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#ffffff"
+                stroke-width="1.25"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                >
+                <path d="M12 21l-8 -4.5v-9l8 -4.5l8 4.5v4.5" />
+                <path d="M12 12l8 -4.5" />
+                <path d="M12 12v9" />
+                <path d="M12 12l-8 -4.5" />
+                <path d="M22 18h-7" />
+                <path d="M18 15l-3 3l3 3" />
+                </svg>
+                <h3>Envío Gratuito</h3>
+                <p>En pedidos superiores a un monto específico.</p>
+            </div>
+            <div>
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="36"
+                height="36"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#ffffff"
+                stroke-width="1.25"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                >
+                <path d="M17 10h-14l4 -4" />
+                <path d="M7 14h14l-4 4" />
+                </svg>
+
+                <h3>Cambios Fáciles</h3>
+                <p>Política de devolución de 30 días sin complicaciones.</p>
+            </div>
+    </div>
         <a href="catalogo.html" class="btn">Ver Catálogo</a>
     </div>
-    <div class="inicio-imagen">
-        <img src="img/indexImagen.jpg" alt="Ropa deportiva">
-    </div>
-</section>
 
+</section>
+    <!--<div class="inicio-imagen">
+        <img src="img/indexImagen.jpg" alt="Ropa deportiva">
+    </div>-->
+    
 <footer>
     <p>&copy; 2025 FaDa Sports. Todos los derechos reservados.</p>
 </footer>
