--- a/quienes.html
+++ b/quienes.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FaDa Sports - Quiénes Somos</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/img/opc1.png">
 </head>
 <body>
 
 <header>
     <div class="logo">
         <a href="index.html"><img class="logo-img" src="/img/opc1.png" alt="logo empresa"></a>
-        FaDa Sports
+        <p>FaDa Sports</p>
     </div>
     <nav class="menu">
         <a href="index.html">Inicio</a>
