"Catalogo" expandido y "Quienes somos" complementado

--- a/catalogo.html
+++ b/catalogo.html
@@ -21,28 +21,203 @@
 
 <section class="section catalogo">
     <h2>Catálogo</h2>
+
+    <!-- Playeras -->
+    <h3 class="categoria-titulo">Playeras</h3>
     <div class="productos-grid">
         <div class="producto">
-            <img src="" alt="Playera deportiva">
-            <h3>Playera deportiva</h3>
+            <img src="img/Catalogo/Playeras/playeraDep.jpeg" alt="Playera deportiva">
+            <h3>Playera Deportiva</h3>
             <p>$299 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> S, M, L, XL</li>
+                <li><strong>Colores:</strong> Azul, Negro, Blanco</li>
+                <li><strong>Material:</strong> Poliéster</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
         </div>
         <div class="producto">
-            <img src="" alt="Pantalón deportivo">
-            <h3>Pantalón deportivo</h3>
-            <p>$499 MXN</p>
+            <img src="img/Catalogo/Playeras/playeraDep2.jpeg" alt="Playera deportiva">
+            <h3>Playera Deportiva</h3>
+            <p>$349 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> M, L, XL</li>
+                <li><strong>Colores:</strong> Rojo, Negro, Blanco</li>
+                <li><strong>Material:</strong> Algodón</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
         </div>
         <div class="producto">
-            <img src="" alt="Zapatillas deportivas">
-            <h3>Zapatillas deportivas</h3>
-            <p>$1200 MXN</p>
+            <img src="img/Catalogo/Playeras/playeraDep3.jpeg" alt="Playera deportiva">
+            <h3>Playera Deportiva</h3>
+            <p>$329 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> S, M, L</li>
+                <li><strong>Colores:</strong> Verde, Negro</li>
+                <li><strong>Material:</strong> Poliéster</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
         </div>
         <div class="producto">
-            <img src="" alt="Sudadera">
-            <h3>Sudadera</h3>
-            <p>$799 MXN</p>
+            <img src="img/Catalogo/Playeras/playeraDep4.jpeg" alt="Playera deportiva">
+            <h3>Playera Deportiva</h3>
+            <p>$359 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> L, XL</li>
+                <li><strong>Colores:</strong> Azul, Gris</li>
+                <li><strong>Material:</strong> Algodón</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
         </div>
     </div>
+
+    <!-- Pantalones -->
+    <h3 class="categoria-titulo">Pantalones</h3>
+    <div class="productos-grid">
+        <div class="producto">
+            <img src="img/Catalogo/Pantalones/pantalonDep.jpeg" alt="Pantalón deportivo">
+            <h3>Pantalón Deportivo</h3>
+            <p>$499 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> S, M, L, XL</li>
+                <li><strong>Colores:</strong> Negro, Gris</li>
+                <li><strong>Material:</strong> Poliéster</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
+        </div>
+        <div class="producto">
+            <img src="img/Catalogo/Pantalones/pantalonDep1.jpeg" alt="Pantalón deportivo">
+            <h3>Pantalón Deportivo</h3>
+            <p>$549 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> M, L, XL</li>
+                <li><strong>Colores:</strong> Azul, Negro</li>
+                <li><strong>Material:</strong> Algodón</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
+        </div>
+        <div class="producto">
+            <img src="img/Catalogo/Pantalones/pantalonDep2.jpeg" alt="Pantalón deportivo">
+            <h3>Short Deportivo</h3>
+            <p>$519 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> S, M, L</li>
+                <li><strong>Colores:</strong> Gris, Negro</li>
+                <li><strong>Material:</strong> Poliéster</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
+        </div>
+        <div class="producto">
+            <img src="img/Catalogo/Pantalones/pantalonDep4.jpeg" alt="Pantalón deportivo">
+            <h3>Short Deportivo</h3>
+            <p>$559 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> L, XL</li>
+                <li><strong>Colores:</strong> Azul, Negro</li>
+                <li><strong>Material:</strong> Algodón</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
+        </div>
+    </div>
+
+    <!-- Tenis -->
+    <h3 class="categoria-titulo">Tenis</h3>
+    <div class="productos-grid">
+        <div class="producto">
+            <img src="img/Catalogo/Tenis/tenisDep.jpeg" alt="Tenis deportivos">
+            <h3>Tenis Deportivos</h3>
+            <p>$1200 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> 24, 25, 26, 27</li>
+                <li><strong>Colores:</strong> Blanco, Negro</li>
+                <li><strong>Material:</strong> Sintético</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
+        </div>
+        <div class="producto">
+            <img src="img/Catalogo/Tenis/tenisDep2.jpeg" alt="Tenis deportivos">
+            <h3>Tenis Deportivos</h3>
+            <p>$1300 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> 25, 26, 27, 28</li>
+                <li><strong>Colores:</strong> Azul, Blanco</li>
+                <li><strong>Material:</strong> Sintético</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
+        </div>
+        <div class="producto">
+            <img src="img/Catalogo/Tenis/tenisDep3.jpeg" alt="Tenis deportivos">
+            <h3>Tenis Deportivos 3</h3>
+            <p>$1250 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> 24, 25, 26</li>
+                <li><strong>Colores:</strong> Negro, Gris</li>
+                <li><strong>Material:</strong> Sintético</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
+        </div>
+        <div class="producto">
+            <img src="img/Catalogo/Tenis/tenisDep4.jpeg" alt="Tenis deportivos">
+            <h3>Tenis Deportivos</h3>
+            <p>$1350 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> 26, 27, 28</li>
+                <li><strong>Colores:</strong> Blanco, Negro</li>
+                <li><strong>Material:</strong> Sintético</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
+        </div>
+    </div>
+
+    <!-- Sudaderas -->
+    <h3 class="categoria-titulo">Sudaderas</h3>
+    <div class="productos-grid">
+        <div class="producto">
+            <img src="img/Catalogo/Sudaderas/sudaderaDep.jpeg" alt="Sudadera">
+            <h3>Sudadera</h3>
+            <p>$799 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> S, M, L, XL</li>
+                <li><strong>Colores:</strong> Negro, Gris</li>
+                <li><strong>Material:</strong> Algodón</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
+        </div>
+        <div class="producto">
+            <img src="img/Catalogo/Sudaderas/sudaderaDep2.jpeg" alt="Sudadera">
+            <h3>Sudadera</h3>
+            <p>$849 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> M, L, XL</li>
+                <li><strong>Colores:</strong> Azul, Negro</li>
+                <li><strong>Material:</strong> Algodón</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
+        </div>
+        <div class="producto">
+            <img src="img/Catalogo/Sudaderas/sudaderaDep3.jpeg" alt="Sudadera">
+            <h3>Sudadera</h3>
+            <p>$799 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> S, M, L</li>
+                <li><strong>Colores:</strong> Gris, Negro</li>
+                <li><strong>Material:</strong> Algodón</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
+        </div>
+        <div class="producto">
+            <img src="img/Catalogo/Sudaderas/sudaderaDep4.jpeg" alt="Sudadera">
+            <h3>Sudadera</h3>
+            <p>$859 MXN</p>
+            <ul class="detalle-producto">
+                <li><strong>Tallas:</strong> L, XL</li>
+                <li><strong>Colores:</strong> Azul, Gris</li>
+                <li><strong>Material:</strong> Algodón</li>
+            </ul>
+            <a href="#" class="btn-producto">Agregar al carrito</a>
+        </div>
+    </div>
+
 </section>
 
 <footer>
