canvios realizados en casi tdo el pryecto

--- a/contacto.html
+++ b/contacto.html
@@ -28,13 +28,17 @@
 
 <section class="section contacto">
     <h2>Contacto</h2>
-    <p>¿Tienes dudas o comentarios? Contáctanos.</p>
-    <form class="contacto-form">
-        <input type="text" placeholder="Nombre completo" required>
-        <input type="email" placeholder="Correo electrónico" required>
-        <textarea placeholder="Mensaje" rows="5" required></textarea>
-        <input type="submit" value="Enviar" class="btn">
-    </form>
+    <div class="fondo-registro">
+        <form class="contacto-form">
+            <legend>¿Tienes dudas o comentarios? Contáctanos.</legend>
+            <label>Nombre</label>
+            <input type="text" placeholder="Nombre completo" required>
+            <label>Correo electrónico</label>
+            <input type="email" placeholder="Correo electrónico" required>
+            <textarea placeholder="Mensaje" rows="5" required></textarea>
+            <input type="submit" value="Enviar" class="btn">
+        </form>
+    </div>
 </section>
 
 <footer>
