--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <path d="M18 15l-3 3l3 3" />
                 </svg>
                 <h3>Envío Gratuito</h3>
-                <p>En pedidos superiores a un monto específico.</p>
+                <p>En pedidos superiores a $2000</p>
             </div>
             <div>
                 <svg
@@ -88,7 +88,7 @@
                 </svg>
 
                 <h3>Cambios Fáciles</h3>
-                <p>Política de devolución de 30 días sin complicaciones.</p>
+                <p>Política de devolución de 30 días sin complicaciones ni trabas.</p>
             </div>
     </div>
         <a href="catalogo.html" class="btn">Ver Catálogo</a>
