--- a/catalogo.html
+++ b/catalogo.html
@@ -33,7 +33,7 @@
     <h3 class="categoria-titulo">Playeras</h3>
     <div class="productos-grid">
         <div class="producto">
-            <img src="" alt="Playera deportiva">
+            <img src="img/Catalogo/Playeras/playeraDep.jpeg" alt="Playera deportiva">
             <h3>Playera deportiva</h3>
             <p>$299 MXN</p>
             <ul class="detalle-producto">
