--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <header>
     <div class="logo">
-        <a href="index.html"><img class="logo-img" src="../img/opc1.png" alt="logo empresa"></a>
+        <a href="index.html"><img class="logo-img" src="img/opc1.png" alt="logo empresa"></a>
         <p>FaDa Sports</p>
     </div>
     <nav class="menu">
