--- a/catalogo.html
+++ b/catalogo.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/img/opc1.png">
+    <link rel="icon" type="image/x-icon" href="img/opc1.png">
 </head>
 <body>
 
 <header>
     <div class="logo">
-        <a href="index.html"><img class="logo-img" src="../img/opc1.png" alt="logo empresa"></a>
+        <a href="index.html"><img class="logo-img" src="img/opc1.png" alt="logo empresa"></a>
         <p>FaDa Sports</p>
     </div>
     <nav class="menu">
