Correccion de los archivos y se agrega la informacion del producto y el carrito (ejemplos)

--- a/catalogo.html
+++ b/catalogo.html
@@ -126,7 +126,7 @@
         <div class="producto">
             <img src="img/Catalogo/Tenis/tenisDep.jpeg" alt="Tenis deportivos">
             <h3>Tenis Deportivos</h3>
-            <p>$1200 MXN</p>
+            <p>$1200 MXN</p> 
             <ul class="detalle-producto">
                 <li><strong>Tallas:</strong> 24, 25, 26, 27</li>
                 <li><strong>Colores:</strong> Blanco, Negro</li>
@@ -137,13 +137,13 @@
         <div class="producto">
             <img src="img/Catalogo/Tenis/tenisDep2.jpeg" alt="Tenis deportivos">
             <h3>Tenis Deportivos</h3>
-            <p>$1300 MXN</p>
+            <p>$1299 MXN</p>
             <ul class="detalle-producto">
                 <li><strong>Tallas:</strong> 25, 26, 27, 28</li>
                 <li><strong>Colores:</strong> Azul, Blanco</li>
                 <li><strong>Material:</strong> Sintético</li>
             </ul>
-            <a href="#" class="btn-producto">Agregar al carrito</a>
+            <a href="producto/producto.html" class="btn-producto">Agregar al carrito</a>
         </div>
         <div class="producto">
             <img src="img/Catalogo/Tenis/tenisDep3.jpeg" alt="Tenis deportivos">
