--- a/contacto.html
+++ b/contacto.html
@@ -20,14 +20,24 @@
 </header>
 
 <section class="section contacto">
-    <h2>Contacto</h2>
-    <p>¿Tienes dudas o comentarios? Contáctanos.</p>
-    <form class="contacto-form">
-        <input type="text" placeholder="Nombre completo" required>
-        <input type="email" placeholder="Correo electrónico" required>
-        <textarea placeholder="Mensaje" rows="5" required></textarea>
-        <input type="submit" value="Enviar" class="btn">
-    </form>
+    <div class="form-container">
+        <!-- Lado izquierdo: Formulario de contacto -->
+        <div class="form-tabs contacto-form-tab">
+            <h2>Contacto</h2>
+            <p>¿Tienes dudas o comentarios? Contáctanos.</p>
+            <form class="contacto-form">
+                <input type="text" placeholder="Nombre completo" required>
+                <input type="email" placeholder="Correo electrónico" required>
+                <textarea placeholder="Mensaje" rows="5" required></textarea>
+                <input type="submit" value="Enviar" class="btn">
+            </form>
+        </div>
+
+        <!-- Lado derecho: Imagen del logo -->
+        <div class="side-logo">
+            <img src="img/logo.jpg" alt="FaDa Sports Logo">
+        </div>
+    </div>
 </section>
 
 <footer>
