--- a/index.html
+++ b/index.html
@@ -11,22 +11,68 @@
 <header>
     <div class="logo">FaDa Sports</div>
     <nav class="menu">
-        <a href="index.html">Inicio</a>
-        <a href="quienes.html">Quiénes Somos</a>
-        <a href="catalogo.html">Catálogo</a>
-        <a href="registro.html">Registro</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="../index.html">Inicio</a>
+        <a href="../quienes.html">Quiénes Somos</a>
+        <a href="../catalogo.html">Catálogo</a>
+        <a href="carrito/carrito.html">Carrito</a>
+        <a href="../registro.html">Registro</a>
+        <a href="../contacto.html">Contacto</a>
     </nav>
 </header>
 
 <section class="section inicio">
     <div class="inicio-texto">
-        <h1>Bienvenido a FaDa Sports</h1>
-        <p>La mejor tienda de ropa deportiva en línea. Calidad, comodidad y estilo para tu entrenamiento.</p>
-        <a href="catalogo.html" class="btn">Ver Catálogo</a>
+        <h1>Bienvenido a <span>FaDa Sports</span></h1>
+        <p>La mejor tienda de ropa deportiva en línea. Calidad, comodidad y estilo para tu entrenamiento, con garantía de satisfacción y envíos rápidos a todo el país.</p>
+        <a href="catalogo.html" class="btn btn-gradiente">Ver Catálogo</a>
     </div>
     <div class="inicio-imagen">
         <img src="img/indexImagen.jpg" alt="Ropa deportiva">
+    </div>
+</section>
+
+<section class="section destacados">
+    <h2>Productos Destacados</h2>
+    <div class="productos-grid">
+        <div class="producto">
+            <img src="img/Catalogo/Tenis/tenisDep2.jpeg" alt="Producto 1">
+            <h3>Tenis Running</h3>
+            <p>Comodidad y rendimiento para tus entrenamientos.</p>
+            <a href="catalogo.html" class="btn btn-gradiente">Comprar</a>
+        </div>
+        <div class="producto">
+            <img src="img/Catalogo/Sudaderas/sudaderaDep.jpeg" alt="Producto 2">
+            <h3>Sudadera Deportiva</h3>
+            <p>Perfecta para entrenar o salir con estilo.</p>
+            <a href="catalogo.html" class="btn btn-gradiente">Comprar</a>
+        </div>
+        <div class="producto">
+            <img src="img/Catalogo/Pantalones/pantalonDep2.jpeg" alt="Producto 3">
+            <h3>Shorts de Entrenamiento</h3>
+            <p>Ligeros, cómodos y resistentes.</p>
+            <a href="catalogo.html" class="btn btn-gradiente">Comprar</a>
+        </div>
+    </div>
+</section>
+
+<section class="section beneficios">
+    <h2>¿Por qué elegirnos?</h2>
+    <div class="beneficios-grid">
+        <div class="beneficio">
+            <div class="icono"><img src="img/Index/envio.png" alt="Envío rápido"></div>
+            <h3>Envío rápido</h3>
+            <p>Recibe tus pedidos en tiempo récord, directo a tu puerta.</p>
+        </div>
+        <div class="beneficio">
+            <div class="icono"><img src="img/Index/calidad.png" alt="Productos de calidad"></div>
+            <h3>Productos de calidad</h3>
+            <p>Trabajamos solo con marcas confiables y materiales de primera.</p>
+        </div>
+        <div class="beneficio">
+            <div class="icono"><img src="img/Index/garantia.png" alt="Garantía"></div>
+            <h3>Garantía</h3>
+            <p>Compra con total confianza y respaldo en cada producto.</p>
+        </div>
     </div>
 </section>
 
