--- a/registro.html
+++ b/registro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FaDa Sports - Registro</title>
+    <title>FaDa Sports - Usuario</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,22 +14,54 @@
         <a href="index.html">Inicio</a>
         <a href="quienes.html">Quiénes Somos</a>
         <a href="catalogo.html">Catálogo</a>
-        <a href="registro.html">Registro</a>
+        <a href="registro.html">Usuario</a>
         <a href="contacto.html">Contacto</a>
     </nav>
 </header>
 
-<section class="section registro">
-    <h2>Registro</h2>
-    <form>
-        <div class="form-grid">
-            <input type="text" placeholder="Nombre completo" required>
-            <input type="email" placeholder="Correo electrónico" required>
-            <input type="password" placeholder="Contraseña" required>
-            <input type="submit" value="Registrarse" class="btn">
+<section class="section usuario">
+    <div class="form-container">
+        <!-- Lado izquierdo: Imagen del logo -->
+        <div class="side-logo">
+            <img src="img/logo.jpg" alt="FaDa Sports Logo">
         </div>
-    </form>
+
+        <div class="form-tabs">
+            <!-- Radios para controlar la pestaña -->
+            <input type="radio" name="tab" id="tab-login" checked>
+            <input type="radio" name="tab" id="tab-registro">
+
+            <!-- Etiquetas que funcionan como botones de pestañas -->
+            <div class="tabs">
+                <label for="tab-login" class="tab-btn">Iniciar Sesión</label>
+                <label for="tab-registro" class="tab-btn">Registro</label>
+            </div>
+
+            <!-- Formularios -->
+            <div class="forms-container">
+                <div class="form-box login-box">
+                    <h2 style="padding-bottom: 10px;">Iniciar Sesión</h2>
+                    <form>
+                        <input type="email" placeholder="Correo electrónico" required>
+                        <input type="password" placeholder="Contraseña" required>
+                        <input type="submit" value="Ingresar" class="btn" style="margin-top: 40px;">
+                    </form>
+                </div>
+
+                <div class="form-box registro-box">
+                    <h2 style="padding-bottom: 10px;">Registro</h2>
+                    <form>
+                        <input type="text" placeholder="Nombre completo" required>
+                        <input type="email" placeholder="Correo electrónico" required>
+                        <input type="password" placeholder="Contraseña" required>
+                        <input type="submit" value="Registrarse" class="btn">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
+
 
 <footer>
     <p>&copy; 2025 FaDa Sports. Todos los derechos reservados.</p>
