--- a/contacto.html
+++ b/contacto.html
@@ -14,6 +14,7 @@
         <a href="index.html">Inicio</a>
         <a href="quienes.html">Quiénes Somos</a>
         <a href="catalogo.html">Catálogo</a>
+        <a href="carrito/carrito.html">Carrito</a>
         <a href="registro.html">Registro</a>
         <a href="contacto.html">Contacto</a>
     </nav>
