--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-    <div class="logo">FaDa Sports</div>
+    <div class="logo">FaDa Sports</div> 
     <nav class="menu">
         <a href="../index.html">Inicio</a>
         <a href="../quienes.html">Quiénes Somos</a>
@@ -21,15 +21,16 @@
 </header>
 
 <section class="section inicio">
-    <div class="inicio-texto">
+    <img src="img/indexImagen.jpg" alt="Ropa deportiva" class="inicio-fondo">
+    <div class="inicio-overlay"></div>
+    <div class="inicio-textoI">
         <h1>Bienvenido a <span>FaDa Sports</span></h1>
         <p>La mejor tienda de ropa deportiva en línea. Calidad, comodidad y estilo para tu entrenamiento, con garantía de satisfacción y envíos rápidos a todo el país.</p>
         <a href="catalogo.html" class="btn btn-gradiente">Ver Catálogo</a>
     </div>
-    <div class="inicio-imagen">
-        <img src="img/indexImagen.jpg" alt="Ropa deportiva">
-    </div>
 </section>
+
+
 
 <section class="section destacados">
     <h2>Productos Destacados</h2>
