Se agregan nuevas ventanas para el admin, ademas de los detalles de compra para el usuario

--- a/carrito/carrito.html
+++ b/carrito/carrito.html
@@ -42,7 +42,9 @@
 
         <div class="carrito-total">
             <h2>Total: <span>$1,299 MXN</span></h2>
-            <button class="btn-pagar">Proceder al pago</button>
+            <!-- <a href= "../detalle_compra.html" class= "btn-pagar">Proceder al pago</a> -->
+             <button onclick="window.location.href='../detalle_compra.html'" class="btn-pagar">Ver Detalle de Compra</button>
+
         </div>
     </main>
 
