--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="../catalogo.html">Catálogo</a>
         <a href="carrito/carrito.html">Carrito</a>
         <a href="../registro.html">Registro</a>
+        <!-- <a href="#">Cerrar sesión</a> -->
         <a href="../contacto.html">Contacto</a>
     </nav>
 </header>
