--- a/quienes.html
+++ b/quienes.html
@@ -11,10 +11,10 @@
 <header>
     <div class="logo">FaDa Sports</div>
     <nav class="menu">
-        <a href="index.html">Inicio</a>
+        <a href="index.php">Inicio</a>
         <a href="quienes.html" class="activo">Quiénes Somos</a>
-        <a href="catalogo.html">Catálogo</a>
-        <a href="carrito/carrito.html">Carrito</a>
+        <a href="catalogo.php">Catálogo</a>
+        <a href="carrito/carrito.php">Carrito</a>
         <a href="registro.html">Registro</a>
         <a href="contacto.html">Contacto</a>
     </nav>
