Se agrega la pagina de usuario (faltan detalles esteticos y esta sin funcionamiento (se me acabo la pila xd))

--- a/contacto.html
+++ b/contacto.html
@@ -11,11 +11,11 @@
 <header>
     <div class="logo">FaDa Sports</div>
     <nav class="menu">
-        <a href="index.html">Inicio</a>
+        <a href="index.php">Inicio</a>
         <a href="quienes.html">Quiénes Somos</a>
-        <a href="catalogo.html">Catálogo</a>
-        <a href="carrito/carrito.html">Carrito</a>
-        <a href="registro.html">Registro</a>
+        <a href="catalogo.php">Catálogo</a>
+        <a href="carrito/carrito.php">Carrito</a>
+        <a href="registro.php">Registro</a>
         <a href="contacto.html">Contacto</a>
     </nav>
 </header>
