--- a/quienes.html
+++ b/quienes.html
@@ -15,7 +15,7 @@
         <a href="quienes.html" class="activo">Quiénes Somos</a>
         <a href="catalogo.php">Catálogo</a>
         <a href="carrito/carrito.php">Carrito</a>
-        <a href="registro.html">Registro</a>
+        <a href="registro.php">Registro</a>
         <a href="contacto.html">Contacto</a>
     </nav>
 </header>
